--- a/Css/love.css
+++ b/Css/love.css
@@ -7,7 +7,7 @@
   body{
     font-family: 'Shantell Sans', cursive;
     margin: 0%;
-    background-color:bisque;
+    background-color:#ffeea3;
     color: aliceblue;
 }
 
