--- a/Css/gf.css
+++ b/Css/gf.css
@@ -74,6 +74,7 @@ button:hover {
   color: aliceblue;
   background-color: rgb(249, 164, 235);
 }
+
 .button:hover {
   background-color: rgb(44, 245, 191);
 }
@@ -95,7 +96,7 @@ a {
     max-width: 1400px;
     margin: auto;
     overflow: hidden;
-    margin-top: 20vh;
+    margin-top: 10vh;
   }
 
 .box{
@@ -103,7 +104,7 @@ a {
     margin-left: 10%;
     padding: 20px 35px;
     width: 80%;
-    height: 30vh;
+    height: 35vh;
     background: #ffffff;
     border-radius: 16px;
     -webkit-border-radius: 16px;
@@ -237,7 +238,7 @@ a {
   -o-border-radius: 30px;
   padding: 30px;
   text-align: center;
-  height: 40%;
+  height: 45%;
   width: 70%;
   opacity: 0;
   transition: .3s ease all;
@@ -274,4 +275,59 @@ height: 60%;
 
 
 .popup.active { opacity: 1; transform:scale(1) ; -webkit-transform:scale(1) ; -moz-transform:scale(1) ; -ms-transform:scale(1) ; -o-transform:scale(1) ; }
-.popup.active h2{ animation: entradaTitulo .8s ease .5s; }
+.popup.active h2{ animation: entradaTitulo .8s ease .1s; -webkit-animation: entradaTitulo .8s ease .1s; }
+
+@keyframes entradaTitulo {
+  from {
+    transform: translateY(-25px);
+    -webkit-transform: translateY(-25px);
+    -moz-transform: translateY(-25px);
+    -ms-transform: translateY(-25px);
+    -o-transform: translateY(-25px);
+}
+  to {
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+}
+}
+
+.popup.active button{ animation: entradaButton .8s ease .1s; -webkit-animation: entradaButton .8s ease .1s; }
+
+@keyframes entradaButton {
+  from {
+    transform: translateY(-25px);
+    -webkit-transform: translateY(-25px);
+    -moz-transform: translateY(-25px);
+    -ms-transform: translateY(-25px);
+    -o-transform: translateY(-25px);
+}
+  to {
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+}
+}
+
+.popup.active a{ animation: entradaA .8s ease .1s; -webkit-animation: entradaA .8s ease .1s; }
+
+@keyframes entradaA {
+  from {
+    transform: translateY(-25px);
+    -webkit-transform: translateY(-25px);
+    -moz-transform: translateY(-25px);
+    -ms-transform: translateY(-25px);
+    -o-transform: translateY(-25px);
+}
+  to {
+    transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+}
+}
