--- a/Css/calculadora.css
+++ b/Css/calculadora.css
@@ -253,7 +253,7 @@
   .box{
       position: relative;
       margin-left: 30%;
-      width: 40vh;
+      width: 400px;
       height: 600px;
       background: #0c0e14;
       border-radius: 16px;
