--- a/Css/crud.css
+++ b/Css/crud.css
@@ -1,19 +1,117 @@
-*{
-    box-sizing: border-box;
-  }
-  html {
-    scroll-behavior: smooth;
-  }
-  body{
-    font-family: 'Roboto', sans-serif;
-    margin: 0%;
-    background-color: #14151a;
-    color: aliceblue;
+/* styles.css */
+
+* {
+  box-sizing: border-box;
 }
 
-.container{
-    width: 80%;
-    max-width: 1400px;
-    margin: auto;
-    overflow: hidden;
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  background-color: #14151a;
+  color: aliceblue;
+  text-align: center;
+}
+
+.stars {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.stars:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../Img/ses.png');
+  animation: animateStars 100s linear infinite;
+  -webkit-animation: animateStars 100s linear infinite;
+}
+
+@keyframes animateStars {
+  0% {
+      background-position: 0 0;
   }
+  100% {
+      background-position: -5000px -5000px;
+  }
+}
+
+a {
+  color: #8f8f8f;
+  text-decoration: none;
+}
+
+a:hover {
+  color: aliceblue;
+}
+
+.container {
+  width: 95%;
+  max-width: 1400px;
+  margin: 10px auto;
+  overflow: hidden;
+}
+
+.form-control {
+  font-weight: bold;
+  border-radius: 10px;
+  border: 1px solid aliceblue;
+  box-shadow: 2px 2px 10px aliceblue;
+  color: aliceblue;
+  background-color: #14151a;
+}
+
+.btn-primary {
+  font-size: 1em;
+  font-weight: bold;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: 1px solid aliceblue;
+  box-shadow: 2px 2px 10px aliceblue;
+  color: aliceblue;
+  background-color: #05389f;
+  margin-top: 10px;
+}
+
+.btn-primary:hover {
+  background-color: #1043a8;
+}
+
+.options {
+  display: flex;
+  text-align: right;
+  gap: 10px;
+}
+
+@media (max-width: 768px) {
+  .col-4 {
+      width: 100%;
+  }
+  .table-responsive {
+    width: 100%;
+      overflow-y: auto;
+      overflow-x: auto;
+  }
+  table{
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+}
+
+ .centered-content {
+  margin: 0 auto;
+  text-align: center;
+}
