--- a/Css/index.css
+++ b/Css/index.css
@@ -378,7 +378,7 @@ height: 60%;
 
 
 .popup.active { opacity: 1; transform:scale(1) ; -webkit-transform:scale(1) ; -moz-transform:scale(1) ; -ms-transform:scale(1) ; -o-transform:scale(1) ; }
-.popup.active h2{ animation: entradaTitulo .8s ease .5s; }
+.popup.active h4{ animation: entradaTitulo .8s ease .5s; }
 
 
 #Tecnologias .container{
@@ -387,18 +387,18 @@ height: 60%;
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    height: 120vh;
     padding-bottom: 5vh;
 }
 
 #programming {
   margin: 40px 1;
   width: 90%;
-  height: 40%;
+  height: 35vh;
   outline: 2px solid;
   resize: both;
   overflow: hidden;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   align-content: flex-start;
   gap: 5px;
@@ -468,7 +468,7 @@ height: 60%;
 #framework {
   margin: 40px 1;
   width: 90%;
-  height: 40%;
+  height: 20vh;
   outline: 2px solid;
   resize: both;
   overflow: hidden;
@@ -512,7 +512,7 @@ height: 60%;
 #database {
   margin: 40px 1;
   width: 90%;
-  height: 40%;
+  height: 20vh;
   outline: 2px solid;
   resize: both;
   overflow: hidden;
@@ -557,7 +557,7 @@ height: 60%;
 #use {
   margin: 40px 1;
   width: 90%;
-  height: 40%;
+  height: 35vh;
   outline: 2px solid;
   resize: both;
   overflow: hidden;
@@ -607,10 +607,7 @@ height: 60%;
 }
 
 
-#Proyectos .container{
-    padding-top: 10%;
-    padding-bottom: 10%;
-    gap: 10vh;
+#Proyectos{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -618,15 +615,9 @@ height: 60%;
     flex-direction: column;
 }
 
-#Proyectos .projects{
-  padding-top: 10%;
-  padding-bottom: 10%;
-  gap: 10vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  flex-direction: column;
+#Proyectos .container{
+  padding-top: 10vh;
+  padding-bottom: 10vh;
 }
 
 .neon {
@@ -654,6 +645,93 @@ height: 60%;
   text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #f5b921 , 0 0 70px #f5b921 , 0 0 80px #f5b921 , 0 0 100px #f5b921 ;
 }
 
+.imagenes {
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+  display: grid;
+  grid-template-columns: repeat(
+      auto-fit,
+      minmax(200px, 1fr)
+  );
+  gap: 5vh;
+}
+
+.img{
+  background-color: #000000;
+  width: 100%;
+  height: 150px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  margin: 0%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.img h3{
+  margin: 0;
+  font-size: 1.2em;
+}
+
+.img p{
+  margin: 0;
+  font-size: 0.7em;
+}
+
+.img .button{
+  margin: 16px 0 16px;
+  font-size: 1em;
+}
+
+.img:nth-child(1){
+  background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+  )
+  ,url("../Img/santamesa.png");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.img:nth-child(2){
+  background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+  )
+  ,url("../Img/CRUD.png");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.img:nth-child(3){
+  background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+  )
+  ,url("../Img/Calculadora.png");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+.img:nth-child(4){
+  background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+  )
+  ,url("../Img/gringosystem.png");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
 
 
 #Contacto .container{
@@ -746,17 +824,25 @@ footer .container{
     -o-border-radius: 10%;
   }
 
-  #Proyectos .projects{
-    padding-top: 10%;
-    padding-bottom: 10%;
-    gap: 10vh;
-    display: flex;
-    align-items: center;
+  #programming{
+    height: 100px;
     justify-content: center;
-    text-align: center;
-    flex-direction:row;
-}
+  }
 
+  #framework{
+    height: 100px;
+    justify-content: center;
+  }
+
+  #database{
+    height: 100px;
+    justify-content: center;
+  }
+
+  #use{
+    height: 100px;
+    justify-content: center;
+  }
 
 
   #Contacto .container{
